--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,23 +9,33 @@
 // A task runner that calls the Typescript compiler (tsc) and
 // Compiles the ts files
 {
-	"version": "0.1.0",
+	"version": "2.0.0",
 
 	// The command is tsc. Assumes that tsc has been installed using npm install -g typescript
 	"command": "tsc",
-
-	// The command is a shell script
-	"isShellCommand": true,
-
-	// Show the output window only if unrecognized errors occur.
-	"showOutput": "silent",
 
 	// args is the .ts files to compile.
 	"args": ["McBlocks/McBlocks.ts", "js/content.ts"],
 
 	// use the standard tsc problem matcher to find compile problems
 	// in the output.
-	"problemMatcher": "$tsc"
+	"problemMatcher": "$tsc",
+	"tasks": [
+		{
+			"label": "tsc",
+			"type": "shell",
+			"command": "tsc",
+			"args": [
+				"McBlocks/McBlocks.ts",
+				"js/content.ts"
+			],
+			"problemMatcher": "$tsc",
+			"group": {
+				"_id": "build",
+				"isDefault": false
+			}
+		}
+	]
 }
 
 // A task runner that calls the Typescript compiler (tsc) and
