launch.json not great. But compiling better JS now.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 { "compilerOptions": {
-    "target": "es5",
-    "module": "amd",
-    "sourceMap": true    
+    "target": "es2020",
+    "module": "CommonJS",
+    "sourceMap": true
 }}
