--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,42 +1,36 @@
 {
-	"version": "0.1.0",
+	"version": "0.2.0",
 	// List of configurations. Add new configurations or edit existing ones.
 	// ONLY "node" and "mono" are supported, change "type" to switch.
 	"configurations": [
 		{
 			// Name of configuration; appears in the launch configuration drop down menu.
-			"name": "Launch index.js",
+			"name": "Launch Edge DevTools",
+
+			"request": "launch",
+			"url": "http://localhost:8080",
 			// Type of configuration. Possible values: "node", "mono".
-			"type": "node",
+			"type": "msedge",
 			// Workspace relative or absolute path to the program.
-			"program": "index.js",
+			// "program": "index.js",
 			// Automatically stop program after launch.
-			"stopOnEntry": false,
+			// "stopOnEntry": false,
 			// Command line arguments passed to the program.
-			"args": [],
+			// "args": [],
 			// Workspace relative or absolute path to the working directory of the program being debugged. Default is the current workspace.
-			"cwd": ".",
+			// "cwd": ".",
 			// Workspace relative or absolute path to the runtime executable to be used. Default is the runtime executable on the PATH.
 			"runtimeExecutable": null,
 			// Optional arguments passed to the runtime executable.
-			"runtimeArgs": ["--nolazy"],
+			// "runtimeArgs": ["--nolazy"],
 			// Environment variables passed to the program.
-			"env": {
-				"NODE_ENV": "development"
-			},
+			// "env": {
+			// 	"NODE_ENV": "development"
+			// },
 			// Use JavaScript source maps (if they exist).
-			"sourceMaps": false,
+			"sourceMaps": true,
 			// If JavaScript source maps are enabled, the generated code is expected in this directory.
-			"outDir": null
+			// "outDir": null
 		},
-		{
-			"name": "Attach",
-			"type": "node",
-			// TCP/IP address. Default is "localhost".
-			"address": "localhost",
-			// Port to attach to.
-			"port": 5858,
-			"sourceMaps": false
-		}
 	]
 }
